# SmartTrash

./: LICENSE  Makefile  pyproject.toml
smarttrash/src/: __main__.py
