[project]
name = "smarttrash"
version = "0.1dev"
description = ""
authors = [
    {name = "KiryxaTech",email = "kiryxatech@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
